# oop-game

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
CLI_Interface/: CLI_Printable.h
CLI_Interface/CLI_Field/: FieldView.cpp  FieldView.h
CLI_Interface/CLI_GameMenu/: CLI_GameMenu.cpp  CLI_GameMenu.h  CLI_GameMenuView.cpp  CLI_GameMenuView.h
CLI_Interface/CLI_Printable/: CLI_Printable.cpp
CLI_Interface/field_interface/: FieldView.cpp  FieldView.h  IntField.cpp  IntField.h
CLI_Interface/level_interface/: LevelView.cpp  LevelView.h
ClassesHelpers/: Randomer.cpp  Randomer.h
ClassesHelpers/Logger/: Logger.cpp  Logger.h
ClassesHelpers/Logger/Adapter/: Adapter.cpp  Adapter.h
Controller/CommandsCodes/: CommandsCodes.h
Controller/PlayerCommandExecutor/: PlayerCommandExecutor.cpp  PlayerCommandExecutor.h
Controller/PlayerControllerInterface/: PlayerControllerInterface.cpp  PlayerControllerInterface.h
Controller/PlayerControllerInterface/PlayerControllerCLI/: PlayerControllerCLI.cpp  PlayerControllerCLI.h
Controller/PlayerControllerInterface/PlayerControllerSomeOther/: PlayerControllerSomeOther.cpp  PlayerControllerSomeOther.h
Game/: CommandExecutor.cpp  CommandExecutor.h  Game.cpp  Game.h
Game/Game/: Game.cpp  Game.h
Game/GameIntreface/: GameInterface.cpp  GameInterface.h
Game/GameRules/: AllEnemiesDeadRules.cpp  AllEnemiesDeadRules.h
Game/GameRules/AllEnemiesDeadRules/: AllEnemiesDeadRules.cpp  AllEnemiesDeadRules.h
Game/GameRules/NumberOfEnemiesDeadRules/: NumberOfEnemiesDeadRules.cpp  NumberOfEnemiesDeadRules.h
Game/GameRules/PickedItem/: PickedItem.cpp  PickedItem.h
Game/GameSerialising/GameSaverLoaderInterface/: GameSaverLoaderInterface.cpp  GameSaverLoaderInterface.h
Game/GameSerialising/GameSaverLoaderJSON/: GameObjectsJsonCreator.cpp  GameObjectsJsonCreator.h  GameSaverLoaderJSON.cpp  GameSaverLoaderJSON.h
Game/GameSerialising/GameSaverLoaderJSON/JSONSaveableInterface/: JSONSaveableInterface.cpp  JSONSaveableInterface.h
Game/GameSerialising/GameSaverLoaderManager/: GameSaverLoaderManager.cpp  GameSaverLoaderManager.h
Game/Logs/Adapter/: Adapter.cpp  Adapter.h
Game/Logs/LogStream/: LogStreamInterface.h
Game/Logs/LogStream/ConsoleStream/: ConsoleStream.cpp  ConsoleStream.h
Game/Logs/LogStream/FileStream/: FileStream.cpp  FileStream.h
Game/Logs/Logger/: Logger.cpp  Logger.h
Game/Logs/Observer/: Observer.cpp  Observer.h
GameMenu/: GameMenu.cpp  GameMenu.h  GameMenuCLI.cpp  GameMenuCLI.h
GameMenu/Settings/: SettingsInterface.cpp  SettingsInterface.h
GameMenu/Settings/SettingsCLI/: SettingsCLI.cpp  SettingsCLI.h
LOG_FILES/: Logs_file.txt
Level/: Level.cpp  Level.h
Level/LevelInterface/: LevelInterface.cpp  LevelInterface.h
Level/Level_Builder/: LevelBuilder.cpp  LevelBuilder.h
classes-interfacesd/AIStrategy/: AIStrategy.h
classes-interfacesd/AIStrategy/ApproachStrategy/: ApproachStrategy.cpp  ApproachStrategy.h
classes-interfacesd/PlayerController/: PlayerController.cpp  PlayerController.h
entities/: Entity.cpp  Entity.h
entities/Creatures/: Creature.cpp  Creature.h
entities/Creatures/Creature/: Creature.cpp  Creature.h
entities/Creatures/Enemies/: MeleeSkeleton.cpp  MeleeSkeleton.h
entities/Creatures/Enemies/AIStrategy/: AIStrategy.cpp  AIStrategy.h
entities/Creatures/Enemies/AIStrategy/ApproachStrategy/: ApproachStrategy.cpp  ApproachStrategy.h
entities/Creatures/Enemies/AIStrategy/ArcherSkeletonStrategy/: ArcherSkeletonStrategy.cpp  ArcherSkeletonStrategy.h
entities/Creatures/Enemies/AIStrategy/MageHealerStrategy/: MageHealerStrategy.cpp  MageHealerStrategy.h
entities/Creatures/Enemies/AIStrategy/MeleeSkeletonAgressiveStrategy/: MeleeSkeletonAgressiveStrategy.cpp  MeleeSkeletonAgressiveStrategy.h
entities/Creatures/Enemies/AIStrategy/StrategiesManager/: StrategiesManager.cpp  StrategiesManager.h
entities/Creatures/Enemies/ArcherSkeleton/: ArcherSkeleton.cpp  ArcherSkeleton.h
entities/Creatures/Enemies/Enemies_types/ArcherSkeleton/: ArcherSkeleton.cpp  ArcherSkeleton.h
entities/Creatures/Enemies/Enemies_types/MageHealer/: MageHealer.cpp  MageHealer.h
entities/Creatures/Enemies/Enemies_types/MeleeSkeleton/: MeleeSkeleton.cpp  MeleeSkeleton.h
entities/Creatures/Enemies/Enemy/: Enemy.cpp  Enemy.h
entities/Creatures/Enemies/MeleeSkeleton/: MeleeSkeleton.cpp  MeleeSkeleton.h
entities/Creatures/Player/: Player.cpp  Player.h
entities/Creatures/Player/PlayerController/: PlayerController.cpp  PlayerController.h
entities/Entity/: Entity.cpp  Entity.h
entities/Items/: Item.cpp  Item.h
entities/Items/Bow/: Bow.cpp  Bow.h
entities/Items/HealItems/: RestorationWand.cpp  RestorationWand.h
entities/Items/Item/: Item.h
entities/Items/MeleeDamageItems/: MeleeDamageItem.cpp  MeleeDamageItem.h
entities/Items/MeleeDamageItems/Axe/: Axe.cpp  Axe.h
field/: Field.cpp  Field.h  FieldIterator.cpp  FieldIterator.h
field/Cells/: Cell.cpp  Cell.h  EnterCell.cpp  EnterCell.h  ExitCell.cpp  ExitCell.h  Wall.cpp  Wall.h
field/Cells/Cell/: Cell.cpp  Cell.h
field/Cells/EnterCell/: EnterCell.cpp  EnterCell.h
field/Cells/ExitCell/: ExitCell.cpp  ExitCell.h
field/Cells/Wall/: Wall.cpp  Wall.h
field/Field/: Field.cpp  Field.h
field/FieldBuilder/: FieldBuilder.cpp  FieldBuilder.h
field/FieldInterface/: FieldInterface.cpp  FieldInterface.h
field/FieldIterator/: FieldIterator.h
